--- a/gradle.properties
+++ b/gradle.properties
@@ -4,20 +4,20 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21.4
-yarn_mappings=1.21.4+build.2
-loader_version=0.16.9
+minecraft_version=1.21.8
+yarn_mappings=1.21.8+build.1
+loader_version=0.20.24
 
 # Fabric API
-fabric_version=0.113.0+1.21.4
+fabric_version=0.92.5+1.21.8
+
 # Mod Properties
-mod_version = 2.3.0
+mod_version=2.3.0
 
-#x.y.z
+# x.y.z
+# x -- major mc release
+# y -- minor mc release
+# z -- ui utils release
 
-#x -- major mc release
-#y -- minor mc release
-#z -- ui utils release
-
-maven_group = com.ui_utils
-archives_base_name = ui_utils
+maven_group=com.ui_utils
+archives_base_name=ui_utils
